--- a/starter-code/moon.css
+++ b/starter-code/moon.css
@@ -25,6 +25,56 @@ header {
     height: 10vh;
     z-index: 2;
 }
+#navForTabletAndDesktop {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 2rem;
+    background-color: rgb(0, 0, 0);
+    max-width: 55%;
+}
+
+#navForTabletAndDesktop ul{
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+    height: 100%;
+}
+
+#navForTabletAndDesktop ul li {
+    list-style-type: none;
+}
+
+#navForTabletAndDesktop ul li a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    height: 10rem;
+}
+
+#navForTabletAndDesktop ul li a:hover::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
+.active {
+    position: relative;
+}
+
+.active::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
 
 #toggleNavBar {
     height: 100vh;
@@ -34,6 +84,7 @@ header {
     right: 0px;
     bottom: 0px;
     display: none;
+    z-index: 9;
 }
 
 #list {
@@ -105,6 +156,7 @@ header {
 #header h3 span {
     color: #979797;
 }
+
 
 #moonImg img {
     width: 10rem;
@@ -227,3 +279,101 @@ hr {
     text-transform: uppercase;
     font-family: 'Bellefair', sans-serif;
 }
+
+
+@media only screen and (min-width: 750px) {
+    
+    #container {
+        position: relative;
+    }
+    
+    #moonImg img {
+        width: 20rem;
+        margin-top: 2rem;
+    }
+    #header h3 {
+        position: absolute;
+        left: 2rem;
+    }
+
+    #selection ul {
+        gap: 2.5rem;
+    }
+
+    .planetName {
+        font-size: 5rem;
+    }
+
+    #textAboutPlanet {
+        width: 70%;
+    }
+
+    #info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+}
+
+/*  */
+@media only screen and (max-width: 449px) {
+    #hamburger {
+        display: block;
+    }
+  }
+
+@media only screen and (max-width: 450px){
+    #navForTabletAndDesktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    /* body {
+      background-image: url(starter-code/assets/home/background-home-tablet.jpg);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    } */
+
+    #container {
+        width: 80%;
+        margin: auto;
+    }
+
+    #question span {
+        font-size: 1.2rem;
+    }
+
+    #destination span {
+        font-size: 9rem;
+    }
+
+    #response p {
+        margin: auto;
+        width: 80%;
+        font-size: 1.05rem;
+    }
+
+    #navForTabletAndDesktop {
+        width: 65%;
+    }
+  }
+
+  @media only screen and (max-width: 552px) {
+    #navForTabletAndDesktop {
+        min-width: 65%;
+    }
+  }
+
+  @media only screen and (min-width: 900px) {
+    #container {
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 5rem;
+    }
+    #moonImg {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+    }
+  }
