--- a/starter-code/capsule.css
+++ b/starter-code/capsule.css
@@ -27,15 +27,75 @@ header {
     z-index: 2;
 }
 
+#navLine {
+    width: 40%;
+    height: .025rem;
+    background-color: grey;
+    position: absolute;
+    left: 8rem;
+    /* display: none; */
+}
+
+#navForTabletAndDesktop {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 2rem;
+    background-color: rgb(0, 0, 0, 0.2);
+    max-width: 55%;
+}
+
+#navForTabletAndDesktop ul{
+    display: flex;
+    gap: 1rem;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+#navForTabletAndDesktop ul li {
+    list-style-type: none;
+}
+
+#navForTabletAndDesktop ul li a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    height: 10rem;
+}
+
+#navForTabletAndDesktop ul li a:hover::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
+.active {
+    position: relative;
+}
+
+.active::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
 #toggleNavBar {
     height: 100vh;
     width: 65vw;
     background-color: rgb(0, 0, 0, 0.5);
     position: absolute;
     right: 0px;
-    bottom: 0px;
-    /* border: 1px solid red; */
+    top: 0px;
     display: none;
+    z-index: 1;
 }
 
 #list {
@@ -43,8 +103,8 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 3rem;
-    /* border: 1px solid red; */
     position: relative;
+    z-index: 99999;
 }
 
 #listOffers {
@@ -54,7 +114,6 @@ header {
 }
 
 #listOffers ul{
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -81,15 +140,14 @@ header {
 
 #hamburger {
     cursor: pointer;
+    display: none;
     
 }
 
 #close {
-    /* display: none; */
     cursor: pointer;
     position: absolute;
     right: 1rem;
-
 }
 
 #container {
@@ -115,8 +173,8 @@ header {
     border-bottom: 1px solid #979797;
     width: 100%;
     height: 15rem;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
     background-image: url(../starter-code/assets/technology/image-space-capsule-landscape.jpg);
     background-position: center;
     background-size: cover;
@@ -145,7 +203,7 @@ header {
     color: black;
 }
 
-.active {
+.activate {
     background-color: white !important;
     color: black;
 }
@@ -177,4 +235,144 @@ header {
     font-family: 'Barlow', sans-serif;
     line-height: 1.75;
     width: 80%;
+}
+
+@media only screen and (min-width: 1630px) {
+    
+    .bio {
+        /* border: 1px solid red; */
+        font-size: 1.1rem;
+    }
+    #vehicleName span {
+        font-size: 3rem;
+    }
+
+}
+
+@media only screen and (min-width: 1150px) {
+    
+    body {
+        background-image: url(../starter-code/assets/technology/background-technology-desktop.jpg);
+    }
+
+    #container {
+        grid-template-columns: 2fr 1fr;
+        justify-items: start;
+        width: 100%;
+        margin: auto;
+        margin-top: 5rem;
+        gap: 0rem;
+    }
+    #header h3 {
+        margin-left: 10rem;
+        margin-top: -5rem;
+    }
+    
+    #vehicleImg {
+        margin: auto;
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+        height: 40rem;
+        width: 80%;
+        /* margin-left: 7rem; */
+        background-image: url(../starter-code/assets/technology/image-space-capsule-portrait.jpg);
+    }
+
+    #together {
+        display: flex;
+        gap: 2rem;
+        margin-left: 10rem;
+        /* margin-top: -10rem; */
+    }
+    #bullets {
+        gap: 2rem;
+        flex-direction: column;
+    }
+
+    #vehicleName {
+        align-items: flex-start;
+    }
+    #vehicleName span {
+        /* font-size: 5rem; */
+    }
+    .bio {
+        text-align: left;
+        width: 60%;
+    }
+
+}
+
+@media only screen and (max-width: 1140px) {
+    
+    body {
+        background-image: url(../starter-code/assets/technology/background-technology-tablet.jpg);
+    }
+
+    #container {
+        justify-items: start;
+    }
+
+    #header h3 {
+        margin-left: 3rem;
+    }
+
+    #together {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+    
+    #vehicleImg {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        height: 20rem;
+    }
+
+    #vehicleName h3 {
+        font-size: 1.5rem;
+    }
+
+    #vehicleName span {
+        font-size: 3rem;
+    }
+
+    .bio {
+        /* width: 50%; */
+    }
+
+}
+
+@media only screen and (max-width: 450px){
+    #navForTabletAndDesktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #navForTabletAndDesktop {
+        width: 65%;
+    }
+}
+
+@media only screen and (max-width: 552px) {
+
+    #container {
+        justify-items: center;
+    }
+    #header h3 {
+        margin-left: 0px;
+    }
+
+    #navForTabletAndDesktop {
+        min-width: 65%;
+    }
+  }
+
+  @media only screen and (max-width: 400px){
+    #vehicleName span {
+        font-size: 2rem;
+    }
 }
