--- a/starter-code/moon.css
+++ b/starter-code/moon.css
@@ -25,19 +25,28 @@ header {
     height: 10vh;
     z-index: 2;
 }
+#navLine {
+    width: 40%;
+    height: .025rem;
+    background-color: grey;
+    position: absolute;
+    left: 8rem;
+    /* display: none; */
+}
+
 #navForTabletAndDesktop {
     position: absolute;
     right: 0px;
     top: 0px;
     padding: 2rem;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.2);
     max-width: 55%;
 }
 
 #navForTabletAndDesktop ul{
     display: flex;
     gap: 1rem;
-    justify-content: space-between;
+    justify-content: space-evenly;
     height: 100%;
 }
 
@@ -62,9 +71,9 @@ header {
     margin-top: 1.6rem;
 }
 
-.active {
+/* .active {
     position: relative;
-}
+} */
 
 .active::after {
     position: absolute;
@@ -82,9 +91,9 @@ header {
     background-color: rgb(0, 0, 0, 0.5);
     position: absolute;
     right: 0px;
-    bottom: 0px;
+    top: 0px;
     display: none;
-    z-index: 9;
+    z-index: 1;
 }
 
 #list {
@@ -93,6 +102,7 @@ header {
     justify-content: space-between;
     padding: 3rem;
     position: relative;
+    z-index: 99999;
 }
 
 #listOffers {
@@ -128,6 +138,7 @@ header {
 
 #hamburger {
     cursor: pointer;
+    display: none;
     
 }
 
@@ -135,7 +146,6 @@ header {
     cursor: pointer;
     position: absolute;
     right: 1rem;
-    
 }
 
 #container {
@@ -282,7 +292,9 @@ hr {
 
 
 @media only screen and (min-width: 750px) {
-    
+    body {
+        background-image: url(../starter-code/assets/destination/background-destination-tablet.jpg);
+    }
     #container {
         position: relative;
     }
@@ -330,12 +342,6 @@ hr {
 }
 
 @media only screen and (min-width: 600px) {
-    /* body {
-      background-image: url(starter-code/assets/home/background-home-tablet.jpg);
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-    } */
 
     #container {
         width: 80%;
@@ -367,13 +373,19 @@ hr {
     }
   }
 
-  @media only screen and (min-width: 900px) {
+  @media only screen and (min-width: 1150px) {
+    body {
+        background-image: url(../starter-code/assets/destination/background-destination-desktop.jpg);
+    }
     #container {
         grid-template-columns: repeat(2, 1fr);
-        margin-top: 5rem;
+        margin-top: 10rem;
     }
     #moonImg {
         grid-row: 2 / 3;
         grid-column: 1 / 2;
+    }
+    #header h3 {
+        margin-top: -5rem;
     }
   }
