--- a/starter-code/pilot.css
+++ b/starter-code/pilot.css
@@ -27,15 +27,75 @@ header {
     z-index: 2;
 }
 
+#navLine {
+    width: 40%;
+    height: .025rem;
+    background-color: grey;
+    position: absolute;
+    left: 8rem;
+    /* display: none; */
+}
+
+#navForTabletAndDesktop {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 2rem;
+    background-color: rgb(0, 0, 0, 0.2);
+    max-width: 55%;
+}
+
+#navForTabletAndDesktop ul{
+    display: flex;
+    gap: 1rem;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+#navForTabletAndDesktop ul li {
+    list-style-type: none;
+}
+
+#navForTabletAndDesktop ul li a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    height: 10rem;
+}
+
+#navForTabletAndDesktop ul li a:hover::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
+.active {
+    position: relative;
+}
+
+.active::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
 #toggleNavBar {
     height: 100vh;
     width: 65vw;
     background-color: rgb(0, 0, 0, 0.5);
     position: absolute;
     right: 0px;
-    bottom: 0px;
-    /* border: 1px solid red; */
+    top: 0px;
     display: none;
+    z-index: 1;
 }
 
 #list {
@@ -43,8 +103,8 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 3rem;
-    /* border: 1px solid red; */
     position: relative;
+    z-index: 99999;
 }
 
 #listOffers {
@@ -54,7 +114,6 @@ header {
 }
 
 #listOffers ul{
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -81,6 +140,7 @@ header {
 
 #hamburger {
     cursor: pointer;
+    display: none;
     
 }
 
@@ -137,8 +197,8 @@ header {
     border: none;
 }
 
-.active {
-    background-color: white !important;
+.activate {
+    background-color: white;
 }
 
 #commanderName {
@@ -169,3 +229,112 @@ header {
     line-height: 1.75;
     width: 80%;
 }
+
+@media only screen and (min-width: 600px) {
+    
+    body {
+        background-image: url(../starter-code/assets/crew/background-crew-tablet.jpg);
+        background-repeat: no-repeat;
+    }
+
+    #container {
+        grid-template-columns: repeat(1fr);
+        grid-template-rows: 20px, 2fr, 100px, 3fr;
+        width: 100%;
+        height: 80%;
+        margin: auto;
+        gap: 0rem;
+        justify-items: start;
+        /* align-items: end; */
+    }
+
+    #commanderName {
+        grid-row: 2 / 3;
+    }
+    #commanderImg {
+        grid-row: 4 / 5;
+        border-bottom: none;
+        height: 110%;
+        width: 100%;
+    }
+    #commanderImg img {
+        width: 50%;
+    }
+    #bullets {
+        margin: auto;
+    }
+}
+
+
+@media only screen and (min-width: 1140px) {
+
+    body {
+        background-image: url(../starter-code/assets/crew/background-crew-desktop.jpg);
+    }
+
+    #container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        margin-top: -2rem;
+        width: 80%;
+        height: 80%;
+        margin: auto;
+        gap: 3rem;
+        justify-items: start;
+        align-items: end;
+    }
+    #header h3 {
+        font-size: 1.5rem;
+    }
+    #commanderImg {
+        grid-row: 1 / 5;
+        grid-column: 2 / 3;
+        border-bottom: none;
+        width: 80%;
+        height: 100%;
+    }
+
+    #commanderImg img {
+        width: 100%;
+        height: 100%;
+        margin-top: 5.75rem;
+    }
+    #commanderName {
+        grid-row: 2 / 4;
+        grid-column: 1 / 2;
+        align-items: flex-start;
+    }
+
+    #commanderName h3 {
+        font-size: 2rem;
+    }
+    #commanderName span {
+        font-size: 2rem;
+    }
+    #bullets {
+        margin-left: 0px;
+    }
+    .bio {
+        width: 80%;
+        font-size: 1.2rem;
+        text-align: left;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    #navForTabletAndDesktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #navForTabletAndDesktop {
+        width: 65%;
+    }
+}
+
+@media only screen and (max-width: 552px) {
+    #navForTabletAndDesktop {
+        min-width: 65%;
+    }
+  }
