--- a/starter-code/titan.css
+++ b/starter-code/titan.css
@@ -25,6 +25,65 @@ header {
     height: 10vh;
     z-index: 2;
 }
+#navLine {
+    width: 40%;
+    height: .025rem;
+    background-color: grey;
+    position: absolute;
+    left: 8rem;
+    /* display: none; */
+}
+
+#navForTabletAndDesktop {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 2rem;
+    background-color: rgb(0, 0, 0, 0.2);
+    max-width: 55%;
+}
+
+#navForTabletAndDesktop ul{
+    display: flex;
+    gap: 1rem;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+#navForTabletAndDesktop ul li {
+    list-style-type: none;
+}
+
+#navForTabletAndDesktop ul li a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    height: 10rem;
+}
+
+#navForTabletAndDesktop ul li a:hover::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
+
+.active {
+    position: relative;
+}
+
+.active::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    display: flex;
+    margin-top: 1.6rem;
+}
 
 #toggleNavBar {
     height: 100vh;
@@ -32,8 +91,9 @@ header {
     background-color: rgb(0, 0, 0, 0.5);
     position: absolute;
     right: 0px;
-    bottom: 0px;
+    top: 0px;
     display: none;
+    z-index: 1;
 }
 
 #list {
@@ -42,6 +102,7 @@ header {
     justify-content: space-between;
     padding: 3rem;
     position: relative;
+    z-index: 99999;
 }
 
 #listOffers {
@@ -77,6 +138,7 @@ header {
 
 #hamburger {
     cursor: pointer;
+    display: none;
     
 }
 
@@ -84,7 +146,6 @@ header {
     cursor: pointer;
     position: absolute;
     right: 1rem;
-    
 }
 
 #container {
@@ -105,6 +166,7 @@ header {
 #header h3 span {
     color: #979797;
 }
+
 
 #moonImg img {
     width: 10rem;
@@ -227,3 +289,103 @@ hr {
     text-transform: uppercase;
     font-family: 'Bellefair', sans-serif;
 }
+
+
+@media only screen and (min-width: 750px) {
+    body {
+        background-image: url(../starter-code/assets/destination/background-destination-tablet.jpg);
+    }
+    #container {
+        position: relative;
+    }
+    
+    #moonImg img {
+        width: 20rem;
+        margin-top: 2rem;
+    }
+    #header h3 {
+        position: absolute;
+        left: 2rem;
+    }
+
+    #selection ul {
+        gap: 2.5rem;
+    }
+
+    .planetName {
+        font-size: 5rem;
+    }
+
+    #textAboutPlanet {
+        width: 70%;
+    }
+
+    #info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+}
+
+/*  */
+@media only screen and (max-width: 449px) {
+    #hamburger {
+        display: block;
+    }
+  }
+
+@media only screen and (max-width: 450px){
+    #navForTabletAndDesktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+
+    #container {
+        width: 80%;
+        margin: auto;
+    }
+
+    #question span {
+        font-size: 1.2rem;
+    }
+
+    #destination span {
+        font-size: 9rem;
+    }
+
+    #response p {
+        margin: auto;
+        width: 80%;
+        font-size: 1.05rem;
+    }
+
+    #navForTabletAndDesktop {
+        width: 65%;
+    }
+  }
+
+  @media only screen and (max-width: 552px) {
+    #navForTabletAndDesktop {
+        min-width: 65%;
+    }
+  }
+
+  @media only screen and (min-width: 1150px) {
+    body {
+        background-image: url(../starter-code/assets/destination/background-destination-desktop.jpg);
+    }
+    #container {
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 10rem;
+    }
+    #moonImg {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+    }
+    #header h3 {
+        margin-top: -5rem;
+    }
+  }
